@@ -42,9 +42,9 @@ public class ChaosStormQuest extends Quest {
     private static QuestBuilder createBuilder() {
         return new QuestBuilder()
                 .id(QuestID.MAIN_CHAOS_STORM)
-                .objectives(Arrays.asList(
+                .objectives(List.of(
                         // 혼돈의 징조
-                        new InteractNPCObjective("storm_prophet", "chaos_storm_prophet"),
+                        new InteractNPCObjective("storm_prophet", "chaos_storm_prophet", 1),
                         new VisitLocationObjective("chaos_epicenter", "chaos_storm_epicenter"),
                         new CollectItemObjective("chaos_fragments", Material.CRYING_OBSIDIAN, 30),
                         new KillMobObjective("chaos_spawns", EntityType.ENDERMAN, 50),
@@ -56,7 +56,7 @@ public class ChaosStormQuest extends Quest {
                         new CollectItemObjective("storm_essence", Material.ENDER_PEARL, 100),
                         
                         // 안정화 장치 제작
-                        new InteractNPCObjective("stability_engineer", "dimensional_engineer"),
+                        new InteractNPCObjective("stability_engineer", "dimensional_engineer", 1),
                         new CollectItemObjective("stabilizer_parts", Material.REDSTONE_BLOCK, 20),
                         new CollectItemObjective("power_cores", Material.SEA_LANTERN, 15),
                         new CollectItemObjective("control_crystals", Material.END_CRYSTAL, 10),
@@ -69,7 +69,7 @@ public class ChaosStormQuest extends Quest {
                         new KillMobObjective("chaos_guardians", EntityType.RAVAGER, 10),
                         
                         // 혼돈의 군주
-                        new InteractNPCObjective("chaos_lord", "chaos_lord"),
+                        new InteractNPCObjective("chaos_lord", "chaos_lord", 1),
                         new KillMobObjective("chaos_lord_minions", EntityType.VINDICATOR, 50),
                         new KillMobObjective("chaos_lord_battle", EntityType.WITHER, 5),
                         new CollectItemObjective("chaos_crown", Material.WITHER_SKELETON_SKULL, 3),
@@ -81,7 +81,7 @@ public class ChaosStormQuest extends Quest {
                         new CollectItemObjective("stability_core", Material.NETHER_STAR, 1),
                         
                         // 평화 획득
-                        new InteractNPCObjective("storm_prophet_calm", "chaos_storm_prophet"),
+                        new InteractNPCObjective("storm_prophet_calm", "chaos_storm_prophet", 1),
                         new CollectItemObjective("storm_control_staff", Material.END_ROD, 1),
                         new CollectItemObjective("dimensional_stabilizer", Material.BEACON, 1)
                 ))
@@ -115,8 +115,37 @@ public class ChaosStormQuest extends Quest {
 
     @Override
     public @NotNull List<Component> getObjectiveDescription(@NotNull QuestObjective objective, @NotNull Player who) {
-        String id = objective.getId();
-        return LangManager.get("quest.main.chaos_storm.objectives." + id, who);
+        return switch (objective.getId()) {
+            case "storm_prophet" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STORM_PROPHET, who);
+            case "chaos_epicenter" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_EPICENTER, who);
+            case "chaos_fragments" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_FRAGMENTS, who);
+            case "chaos_spawns" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_SPAWNS, who);
+            case "storm_tracker" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STORM_TRACKER, who);
+            case "storm_eye" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STORM_EYE, who);
+            case "survive_storm" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_SURVIVE_STORM, who);
+            case "storm_essence" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STORM_ESSENCE, who);
+            case "stability_engineer" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STABILITY_ENGINEER, who);
+            case "stabilizer_parts" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STABILIZER_PARTS, who);
+            case "power_cores" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_POWER_CORES, who);
+            case "control_crystals" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CONTROL_CRYSTALS, who);
+            case "build_stabilizer" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_BUILD_STABILIZER, who);
+            case "inner_storm" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_INNER_STORM, who);
+            case "place_stabilizers" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_PLACE_STABILIZERS, who);
+            case "chaos_elementals" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_ELEMENTALS, who);
+            case "chaos_guardians" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_GUARDIANS, who);
+            case "chaos_lord" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_LORD, who);
+            case "chaos_lord_minions" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_LORD_MINIONS, who);
+            case "chaos_lord_battle" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_LORD_BATTLE, who);
+            case "chaos_crown" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_CHAOS_CROWN, who);
+            case "storm_core" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STORM_CORE, who);
+            case "activate_stabilizers" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_ACTIVATE_STABILIZERS, who);
+            case "stabilization_process" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STABILIZATION_PROCESS, who);
+            case "stability_core" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STABILITY_CORE, who);
+            case "storm_prophet_calm" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STORM_PROPHET_CALM, who);
+            case "storm_control_staff" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_STORM_CONTROL_STAFF, who);
+            case "dimensional_stabilizer" -> LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_OBJECTIVES_DIMENSIONAL_STABILIZER, who);
+            default -> List.of(Component.text("Objective: " + objective.getId()));
+        };
     }
 
     @Override
@@ -124,9 +153,14 @@ public class ChaosStormQuest extends Quest {
         return 4;
     }
     
+        @Override
+    public @NotNull List<Component> getDialogs(@NotNull Player who) {
+        return LangManager.list(LangKey.QUEST_MAIN_CHAOS_STORM_DIALOGS, who);
+    }
+    
     @Override
     public @NotNull Component getDialog(int index, @NotNull Player who) {
-        return getDialogs(LangKey.QUEST_MAIN_CHAOS_STORM_DIALOGS, who).get(index);
+        return getDialogs(who).get(index);
     }
     
     @Override
