@@ -23,6 +23,7 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.ArrayList;
 
 /**
  * Desert Oasis - Side Quest
@@ -45,8 +46,8 @@ public class DesertOasisQuest extends Quest {
     private static QuestBuilder createBuilder() {
         return new QuestBuilder()
                 .id(QuestID.SIDE_DESERT_OASIS)
-                .objectives(Arrays.asList(
-                        new InteractNPCObjective("talk_desert_nomad", "desert_nomad"),
+                .objectives(List.of(
+                        new InteractNPCObjective("talk_desert_nomad", "desert_nomad", 1),
                         new VisitLocationObjective("mirages_edge", "Mirages_Edge"),
                         new KillMobObjective("kill_husks", EntityType.HUSK, 20),
                         new CollectItemObjective("desert_blooms", Material.CACTUS, 12),
@@ -73,9 +74,17 @@ public class DesertOasisQuest extends Quest {
         return LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_INFO, who);
     }
 
-    @Override
+        @Override
     public @NotNull List<Component> getObjectiveDescription(@NotNull QuestObjective objective, @NotNull Player who) {
-        return LangManager.get("quest.side.desert_oasis.objectives." + objective.getId(), who);
+        return switch (objective.getId()) {
+            case "talk_desert_nomad" -> LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_OBJECTIVES_TALK_DESERT_NOMAD, who);
+            case "mirages_edge" -> LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_OBJECTIVES_MIRAGES_EDGE, who);
+            case "kill_husks" -> LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_OBJECTIVES_KILL_HUSKS, who);
+            case "desert_blooms" -> LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_OBJECTIVES_DESERT_BLOOMS, who);
+            case "hidden_oasis" -> LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_OBJECTIVES_HIDDEN_OASIS, who);
+            case "oasis_water" -> LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_OBJECTIVES_OASIS_WATER, who);
+            default -> List.of(Component.text("Unknown objective: " + objective.getId()));
+        };
     }
 
     @Override
@@ -83,9 +92,14 @@ public class DesertOasisQuest extends Quest {
         return 3;
     }
     
+        @Override
+    public @NotNull List<Component> getDialogs(@NotNull Player who) {
+        return LangManager.list(LangKey.QUEST_SIDE_DESERT_OASIS_DIALOGS, who);
+    }
+    
     @Override
     public @NotNull Component getDialog(int index, @NotNull Player who) {
-        return getDialogs(LangKey.QUEST_SIDE_DESERT_OASIS_DIALOGS, who).get(index);
+        return getDialogs(who).get(index);
     }
     
     @Override
